fix(watch): control overflow on small devices

--- a/src/styles/Watch.module.scss
+++ b/src/styles/Watch.module.scss
@@ -125,6 +125,7 @@
     .videoPlayer {
       height: 80vh;
       width: 100vw;
+      font-size: 0.5rem !important;
     }
   }
 }
